[package]
name = "bevy_cronjob"
version = "0.1.2"
edition = "2021"
authors = ["FoxZoOL <zhooul@gmail.com>"]
description = "A simple helper to run cronjobs (at repeated schedule) in Bevy."
readme = "README.md"
repository = "https://github.com/foxzool/bevy_cronjob"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "cronjob", "plugin"]
categories = ["game-development"]

[dependencies]
bevy_ecs = "0.11.0"
cron = "0.12.0"
chrono = "0.4.19"

[dev-dependencies]
bevy = { version = "0.11.0", default-features = false, features = [] }

