[package]
name = "bevy_cronjob"
version = "0.5.0"
edition = "2021"
authors = ["FoxZoOL <zhooul@gmail.com>"]
description = "A simple helper to run cronjobs (at repeated schedule) in Bevy."
readme = "README.md"
repository = "https://github.com/foxzool/bevy_cronjob"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "cronjob", "plugin"]
categories = ["game-development"]
homepage = "https://github.com/foxzool/bevy_cronjob"
documentation = "https://docs.rs/bevy_cronjob"

[dependencies]
bevy_app = { version = "0.15.0" }
bevy_ecs = { version = "0.15.0" }

cron = "0.13.0"
chrono = "0.4.19"
english-to-cron = "0.1.2"

[dev-dependencies]
bevy = { version = "0.15.0", default-features = false, features = [] }
#bevy = { path = "../bevy" }



